# checklist-crdt

./: .gitmodules  Cargo.toml
src/: crdt.rs  lib.rs  persistence.rs  storage.rs
src/crdt/: checklist_crdt.rs  crdt.rs  crdt_error.rs  mod.rs
src/persistence/: storage.rs  storage_error.rs
src/persistence/codec/string/: deserialize.rs  serialize.rs
src/persistence/model/: checklist.rs
src/persistence/model/checklist/: head.rs  item.rs
src/persistence/model/checklist/head/: operation.rs  tombstone.rs
src/persistence/model/checklist/item/: operation.rs  tombstone.rs
src/persistence/storage/: error_storage.rs  file_storage.rs  inmemoy_storage.rs  sqlite_storage.rs  store.rs
src/storage/: error.rs  error_storage.rs  error_store.rs  file_storage.rs  file_store.rs  mod.rs  model.rs  storage_error.rs  store.rs
src/storage/error/: backend_error.rs  stamp_error.rs  storage_error.rs  transaction_error.rs
src/storage/model/checklist/: head.rs  item.rs  mod.rs
src/transport/: transport.rs
