[package]
name = "list-crdt"
version = "0.1.0"
edition = "2024"

[dependencies]
exn = "0.3.0"
itc = { version = "0.1.3", path = "crates/itc" }
loro_fractional_index = { version = "1.6.0", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1.20.0", features = ["serde", "v4", "v7", "v8"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
